UILists fail to scroll in recent Buildbot versions on Windows 7 using Click-Drag #46402

Closed
opened 2015-10-07 09:32:38 +02:00 by Rainer Trummer · 9 comments

When adding a number of items to a UIList, the scrollbar appears as it should. But clicking and dragging on it does nothing. Scrolling using the mouse wheel works fine.

Steps:

 + Start Blender, Load Factory settings
 + go to a UIList, for instance the material tab
 + add a bunch of items until the item list is longer than the list
 + try to scroll by click-dragging the scrollbar

broken in BuildBot 2.76.1, hash 68797ed (was broken already in a version about a week ago)
works fine in Blender 2.76 RC3 on the same system

When adding a number of items to a UIList, the scrollbar appears as it should. But clicking and dragging on it does nothing. Scrolling using the mouse wheel works fine. Steps: ``` + Start Blender, Load Factory settings + go to a UIList, for instance the material tab + add a bunch of items until the item list is longer than the list + try to scroll by click-dragging the scrollbar ``` broken in BuildBot 2.76.1, hash 68797ed (was broken already in a version about a week ago) works fine in Blender 2.76 RC3 on the same system
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @RainerTrummer

Added subscriber: @RainerTrummer
Author

forgot to mention I am using the x64 Builds on two different machines, same behavior

forgot to mention I am using the x64 Builds on two different machines, same behavior
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

can confirm this on linux x64, too

can confirm this on linux x64, too
Member

caused by 32365bb

caused by 32365bb
Member

possible fix here D1541

possible fix here [D1541](https://archive.blender.org/developer/D1541)

This issue was referenced by 7a06613b82

This issue was referenced by 7a06613b8219684459374b2440dbfc6a6f2cdbd5
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46402
No description provided.