Fix T46402: UILists fail to scroll using click+drag